📝 content: obsidian commit

--- a/package.json
+++ b/package.json
@@ -25,19 +25,14 @@
   "dependencies": {
     "@11ty/eleventy-img": "^2.0.1",
     "@google/model-viewer": "^2.1.1",
-    "@shoelace-style/shoelace": "^2.0.0-beta.78",
+    "@shoelace-style/shoelace": "2.0.0-beta.87",
     "@zachleat/details-utils": "^2.0.2",
     "canvas-confetti": "^1.5.1",
-    "css-doodle": "^0.30.10",
+    "css-doodle": "0.30.10",
     "d3": "^7.6.1",
-    "dotenv": "^16.0.3",
-    "eleventy-plugin-nesting-toc": "^1.3.0",
     "howler": "^2.2.3",
     "netlify-plugin-cache": "^1.0.3",
-    "open-props": "^1.4.13",
-    "postcss-preset-env": "^7.7.2",
-    "stylized-text": "^4.2.1",
-    "tslib": "^2.4.0"
+    "stylized-text": "^4.2.1"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.18",
@@ -45,19 +40,19 @@
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
-    "@types/markdown-it": "^12.2.3",
     "browserslist": "^4.21.1",
     "cssnano": "^5.1.12",
     "cssremedy": "^0.1.0-beta.2",
+    "dotenv": "^16.0.3",
     "eleventy-plugin-backlinks": "^0.2.0",
     "eleventy-plugin-broken-links": "^2.0.3",
     "eleventy-plugin-gen-favicons": "^1.1.0",
     "eleventy-plugin-json-feed": "^0.0.7",
+    "eleventy-plugin-nesting-toc": "^1.3.0",
     "eleventy-plugin-unfurl": "^1.0.0",
     "eleventy-plugin-webmentions": "^1.1.0",
     "eslint": "^8.11.0",
-    "focus-visible": "^5.2.0",
-    "luxon": "^3.1.1",
+    "luxon": "^3.2.1",
     "markdown-it": "^13.0.1",
     "markdown-it-abbr": "^1.0.4",
     "markdown-it-anchor": "^8.6.4",
@@ -68,12 +63,13 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-sup": "^1.0.0",
     "markdown-it-wikilinks": "^1.2.0",
+    "open-props": "^1.5.3",
     "patch-package": "^6.5.0",
     "postcss": "^8.4.14",
     "postcss-jit-props": "^1.0.7",
+    "postcss-preset-env": "^7.8.3",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.1",
-    "puppeteer-core": "^19.4.1",
     "remove-markdown": "^0.5.0",
     "slinkity": "^0.8.3",
     "slugify": "^1.6.5"
