--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@11ty/eleventy-fetch": "^3.0.0",
     "@11ty/eleventy-img": "^2.0.1",
     "@google/model-viewer": "^2.1.1",
     "@shoelace-style/shoelace": "2.0.0-beta.87",
@@ -31,8 +32,7 @@
     "css-doodle": "0.30.10",
     "d3": "^7.6.1",
     "howler": "^2.2.3",
-    "netlify-plugin-cache": "^1.0.3",
-    "stylized-text": "^4.2.1"
+    "netlify-plugin-cache": "^1.0.3"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.0-canary.18",
