--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "netlify-plugin-cache": "^1.0.3"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^2.0.0-canary.18",
+    "@11ty/eleventy": "2.0.0-beta.2",
     "@11ty/eleventy-navigation": "^0.3.3",
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
@@ -71,7 +71,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.1",
     "remove-markdown": "^0.5.0",
-    "slinkity": "^0.8.3",
+    "slinkity": "1.0.0-canary.0",
     "slugify": "^1.6.5"
   },
   "browserslist": [
