--- a/package.json
+++ b/package.json
@@ -16,15 +16,13 @@
     "url": "https://github.com/ellyloel/ellyloel.com/issues"
   },
   "scripts": {
-    "start": "npx @11ty/eleventy --serve --incremental --quiet",
+    "start": "npx @11ty/eleventy --serve --incremental",
     "clean": "rm -rf _site",
-    "build": "npx @11ty/eleventy --quiet",
+    "build": "npx @11ty/eleventy",
     "debug": "DEBUG=Eleventy* npx @11ty/eleventy",
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@11ty/eleventy-fetch": "^3.0.0",
-    "@11ty/eleventy-img": "^2.0.1",
     "@google/model-viewer": "^2.1.1",
     "@shoelace-style/shoelace": "2.0.0-beta.87",
     "@zachleat/details-utils": "^2.0.2",
@@ -36,10 +34,13 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "2.0.0-beta.2",
+    "@11ty/eleventy-fetch": "^3.0.0",
+    "@11ty/eleventy-img": "^3.0.0",
     "@11ty/eleventy-navigation": "^0.3.3",
     "@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@11ty/eleventy-plugin-vite": "^4.0.0",
     "browserslist": "^4.21.1",
     "cssnano": "^5.1.12",
     "cssremedy": "^0.1.0-beta.2",
@@ -50,7 +51,7 @@
     "eleventy-plugin-json-feed": "^0.0.7",
     "eleventy-plugin-nesting-toc": "^1.3.0",
     "eleventy-plugin-unfurl": "^1.0.0",
-    "eleventy-plugin-webmentions": "^1.1.0",
+    "eleventy-plugin-webmentions": "^2.0.0",
     "eslint": "^8.11.0",
     "luxon": "^3.2.1",
     "markdown-it": "^13.0.1",
@@ -65,9 +66,9 @@
     "markdown-it-wikilinks": "^1.2.0",
     "open-props": "^1.5.3",
     "patch-package": "^6.5.0",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.21",
     "postcss-jit-props": "^1.0.7",
-    "postcss-preset-env": "^7.8.3",
+    "postcss-preset-env": "^8.0.1",
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.6.1",
     "remove-markdown": "^0.5.0",
