--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
 		"@eslint/js": "^8.36.0",
+		"@sindresorhus/slugify": "^1.1.0",
 		"browserslist": "^4.21.1",
 		"cssnano": "^5.1.12",
 		"cssremedy": "^0.1.0-beta.2",
@@ -79,7 +80,6 @@
 		"remove-markdown": "^0.5.0",
 		"rimraf": "^4.4.0",
 		"slinkity": "1.0.0-canary.0",
-		"slugify": "^1.6.5",
 		"stylelint": "^15.2.0",
 		"stylelint-config-standard": "^30.0.1",
 		"stylelint-order": "^6.0.3"
