--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.0",
 		"@11ty/eleventy-fetch": "^3.0.0",
-    "@11ty/eleventy-img": "^3.0.0",
+		"@11ty/eleventy-img": "^3.0.0",
 		"@11ty/eleventy-navigation": "^0.3.3",
 		"@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
@@ -50,6 +50,7 @@
 		"@11ty/eleventy-plugin-vite": "^4.0.0",
 		"@eslint/js": "^8.36.0",
 		"@sindresorhus/slugify": "^1.1.0",
+		"@types/markdown-it": "*",
 		"browserslist": "^4.21.1",
 		"cssnano": "^5.1.12",
 		"cssremedy": "^0.1.0-beta.2",
@@ -85,9 +86,14 @@
 		"slinkity": "1.0.0-canary.0",
 		"stylelint": "^15.2.0",
 		"stylelint-config-standard": "^30.0.1",
-		"stylelint-order": "^6.0.3"
+		"stylelint-order": "^6.0.3",
+		"webpack": ">=5"
 	},
 	"browserslist": [
 		"defaults"
-	]
+	],
+	"peerDependencies": {
+		"@types/markdown-it": "*",
+		"webpack": ">=5"
+	}
 }
