--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,10 @@
 [dev]
-    command = 'yarn start'
+    command = 'pnpm start'
     publish = '_site'
     functions = 'netlify/functions'
 
 [build]
-  command = "yarn build"
+  command = "pnpm build"
   publish = "_site"
   functions = 'netlify/functions'
 
@@ -29,4 +29,4 @@
 package = "netlify-plugin-cache"
 
   [plugins.inputs]
-  paths = [ ".cache" ]
+  paths = [ ".cache", "_webmentioncache" ]
