--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"markdown-it": "^13.0.1",
 		"markdown-it-abbr": "^1.0.4",
 		"markdown-it-anchor": "^8.6.4",
+		"markdown-it-attrs": "^4.1.6",
 		"markdown-it-container": "^3.0.0",
 		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-footnote": "^3.0.3",
