--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
 		"@11ty/eleventy-plugin-vite": "^4.0.0",
 		"@eslint/js": "^8.36.0",
+		"@photogabble/eleventy-plugin-interlinker": "^1.0.1",
 		"@sindresorhus/slugify": "^1.1.0",
 		"@types/markdown-it": "*",
 		"browserslist": "^4.21.1",
@@ -84,6 +85,7 @@
 		"postcss": "^8.4.21",
 		"postcss-import": "^15.1.0",
 		"postcss-jit-props": "^1.0.7",
+		"postcss-load-config": "^4.0.1",
 		"postcss-preset-env": "^8.0.1",
 		"prettier": "^2.6.1",
 		"remove-markdown": "^0.5.0",
