--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,5 @@ netlify/functions/dynamic/*
 !netlify/functions/dynamic/index.js
 
 # Obsidian
-.obsidian/workspace
-.obsidian/workspaces.json
+**/.obsidian/workspace
+**/.obsidian/workspaces.json
