--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
 		"prettier": "^2.6.1",
 		"remove-markdown": "^0.5.0",
 		"rimraf": "^4.4.0",
+		"rss-parser": "^3.13.0",
 		"stylelint": "^15.2.0",
 		"stylelint-config-standard": "^30.0.1",
 		"stylelint-order": "^6.0.3",
