--- a/package.json
+++ b/package.json
@@ -49,9 +49,9 @@
 		"@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-		"@11ty/eleventy-plugin-vite": "^4.0.0",
 		"@eslint/js": "^8.38.0",
 		"@photogabble/eleventy-plugin-interlinker": "^1.0.1",
+		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@sindresorhus/slugify": "^1.1.2",
 		"@types/markdown-it": "^12.2.3",
 		"browserslist": "^4.21.5",
@@ -63,6 +63,8 @@
 		"eleventy-plugin-gen-favicons": "^1.1.2",
 		"eleventy-plugin-json-feed": "^0.0.7",
 		"eleventy-plugin-nesting-toc": "^1.3.0",
+		"eleventy-plugin-postcss": "^1.0.4",
+		"eleventy-plugin-rollup": "^1.3.0",
 		"eleventy-plugin-unfurl": "^1.0.0",
 		"eleventy-plugin-webmentions": "^2.0.0",
 		"eslint": "^8.38.0",
@@ -89,6 +91,8 @@
 		"prettier": "^2.8.7",
 		"remove-markdown": "^0.5.0",
 		"rimraf": "^5.0.0",
+		"rollup": "^3.21.0",
+		"rollup-plugin-terser": "^7.0.2",
 		"rss-parser": "^3.13.0",
 		"stylelint": "^15.5.0",
 		"stylelint-config-standard": "^30.0.1",
