--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"dotenv": "^16.0.3",
 		"eleventy-plugin-backlinks": "^0.2.1",
 		"eleventy-plugin-broken-links": "^2.0.3",
+		"eleventy-plugin-emoji": "^1.1.0",
 		"eleventy-plugin-gen-favicons": "^1.1.2",
 		"eleventy-plugin-json-feed": "^0.0.7",
 		"eleventy-plugin-nesting-toc": "^1.3.0",
@@ -78,7 +79,6 @@
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-attrs": "^4.1.6",
 		"markdown-it-container": "^3.0.0",
-		"markdown-it-emoji": "^2.0.2",
 		"markdown-it-footnote": "^3.0.3",
 		"markdown-it-ins-del": "^0.1.1",
 		"markdown-it-mark": "^3.0.1",
