--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
 		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-prettier": "^4.2.1",
+		"html-minifier": "^4.0.0",
 		"luxon": "^3.3.0",
 		"markdown-it": "^13.0.1",
 		"markdown-it-abbr": "^1.0.4",
