--- a/netlify.toml
+++ b/netlify.toml
@@ -35,8 +35,9 @@
   package = "netlify-plugin-webmentions"
 
   [plugins.inputs]
+  # The base url of your site (optional, default: main URL set in Netlify)
+  baseUrl = "https://www.ellyloel.com"
   # Path to the feed URL (optional, default: /feed.xml)
   feedPath = "/feed.rss"
-
   # Maximum number of feed entries to check for mentions (optional, default: 1)
   limit = 10
