--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+		"@aciccarello/netlify-plugin-webmentions": "^1.1.0",
 		"@eslint/js": "^8.38.0",
 		"@photogabble/eleventy-plugin-interlinker": "^1.0.1",
 		"@rollup/plugin-node-resolve": "^15.0.2",
@@ -85,7 +86,6 @@
 		"markdown-it-mark": "^3.0.1",
 		"markdown-it-sup": "^1.0.0",
 		"markdown-it-wikilinks": "^1.2.0",
-		"netlify-plugin-webmentions": "^1.1.1",
 		"open-props": "^1.5.8",
 		"postcss": "^8.4.23",
 		"postcss-import": "^15.1.0",
