--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"@aciccarello/netlify-plugin-webmentions": "^1.1.0",
 		"@eslint/js": "^8.38.0",
+		"@fortawesome/fontawesome-free": "^6.4.0",
 		"@photogabble/eleventy-plugin-interlinker": "^1.0.1",
 		"@rollup/plugin-node-resolve": "^15.0.2",
 		"@rollup/plugin-terser": "^0.4.1",
@@ -65,6 +66,7 @@
 		"eleventy-plugin-broken-links": "^2.0.3",
 		"eleventy-plugin-emoji": "^1.1.0",
 		"eleventy-plugin-gen-favicons": "^1.1.2",
+		"eleventy-plugin-icons": "^2.4.3",
 		"eleventy-plugin-json-feed": "^0.0.7",
 		"eleventy-plugin-nesting-toc": "^1.3.0",
 		"eleventy-plugin-postcss": "^1.0.4",
