--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"d3": "^7.8.5",
 		"howler": "^2.2.3",
 		"netlify-plugin-cache": "^1.0.3",
+		"node-fetch": "^2",
 		"pagefind": "^0.12.0",
 		"three": "^0.151.3"
 	},
