--- a/package.json
+++ b/package.json
@@ -33,39 +33,39 @@
 	"packageManager": "pnpm@8.6.12",
 	"dependencies": {
 		"@11ty/is-land": "^4.0.0",
-		"@google/model-viewer": "^3.2.1",
-		"@shoelace-style/shoelace": "^2.6.0",
+		"@google/model-viewer": "^3.4.0",
 		"@zachleat/details-utils": "^2.0.2",
-		"canvas-confetti": "^1.6.0",
+		"canvas-confetti": "^1.9.2",
 		"css-doodle": "0.34.9",
-		"d3": "^7.8.5",
-		"howler": "^2.2.3",
+		"d3": "^7.9.0",
+		"dompurify": "^3.0.11",
+		"howler": "^2.2.4",
 		"netlify-plugin-cache": "^1.0.3",
-		"node-fetch": "^2.6.12",
+		"node-fetch": "^2.7.0",
 		"pagefind": "^0.12.0",
-		"three": "^0.154.0",
+		"three": "^0.160.0",
 		"whatwg-url": "5.0.0"
 	},
 	"devDependencies": {
 		"@11ty/eleventy": "^2.0.1",
-		"@11ty/eleventy-fetch": "^4.0.0",
-		"@11ty/eleventy-img": "^3.1.0",
+		"@11ty/eleventy-fetch": "^4.0.1",
+		"@11ty/eleventy-img": "^3.1.8",
 		"@11ty/eleventy-navigation": "^0.3.5",
 		"@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"@aciccarello/netlify-plugin-webmentions": "^1.1.0",
-		"@eslint/js": "^8.46.0",
-		"@fortawesome/fontawesome-free": "^6.4.2",
-		"@photogabble/eleventy-plugin-interlinker": "^1.0.2",
-		"@rollup/plugin-node-resolve": "^15.1.0",
-		"@rollup/plugin-terser": "^0.4.3",
+		"@eslint/js": "^8.57.0",
+		"@fortawesome/fontawesome-free": "^6.5.2",
+		"@photogabble/eleventy-plugin-interlinker": "^1.0.5",
+		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@rollup/plugin-terser": "^0.4.4",
 		"@sindresorhus/slugify": "^1.1.2",
 		"@types/markdown-it": "^12.2.3",
-		"browserslist": "^4.21.10",
-		"cssnano": "^6.0.1",
+		"browserslist": "^4.23.0",
+		"cssnano": "^6.1.2",
 		"cssremedy": "0.1.0-beta.2",
-		"dotenv": "^16.3.1",
+		"dotenv": "^16.4.5",
 		"eleventy-plugin-backlinks": "^0.2.1",
 		"eleventy-plugin-broken-links": "^2.0.3",
 		"eleventy-plugin-emoji": "^1.1.0",
@@ -76,13 +76,13 @@
 		"eleventy-plugin-postcss": "^1.0.4",
 		"eleventy-plugin-rollup": "^1.3.0",
 		"eleventy-plugin-unfurl": "^1.0.0",
-		"eleventy-plugin-webmentions": "^2.0.0",
-		"eslint": "^8.46.0",
+		"eleventy-plugin-webmentions": "^2.1.0",
+		"eslint": "^8.57.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"html-minifier": "^4.0.0",
-		"luxon": "^3.3.0",
-		"markdown-it": "^13.0.1",
+		"luxon": "^3.4.4",
+		"markdown-it": "^13.0.2",
 		"markdown-it-abbr": "^1.0.4",
 		"markdown-it-anchor": "^8.6.7",
 		"markdown-it-attrs": "^4.1.6",
@@ -91,22 +91,22 @@
 		"markdown-it-ins-del": "^0.1.1",
 		"markdown-it-mark": "^3.0.1",
 		"markdown-it-sup": "^1.0.0",
-		"markdown-it-wikilinks": "^1.3.0",
-		"open-props": "^1.5.11",
-		"postcss": "^8.4.27",
+		"markdown-it-wikilinks": "^1.4.0",
+		"open-props": "^1.7.0",
+		"postcss": "^8.4.38",
 		"postcss-import": "^15.1.0",
-		"postcss-jit-props": "^1.0.13",
-		"postcss-load-config": "^4.0.1",
+		"postcss-jit-props": "^1.0.14",
+		"postcss-load-config": "^4.0.2",
 		"postcss-preset-env": "^8.5.1",
 		"prettier": "^2.8.8",
 		"remove-markdown": "^0.5.0",
-		"rimraf": "^5.0.1",
-		"rollup": "^3.27.2",
+		"rimraf": "^5.0.5",
+		"rollup": "^3.29.4",
 		"rss-parser": "^3.13.0",
-		"stylelint": "^15.10.2",
+		"stylelint": "^15.11.0",
 		"stylelint-config-standard": "^33.0.0",
-		"stylelint-order": "^6.0.3",
-		"webpack": "^5.88.2"
+		"stylelint-order": "^6.0.4",
+		"webpack": "^5.91.0"
 	},
 	"browserslist": [
 		"defaults"
