--- a/package.json
+++ b/package.json
@@ -117,7 +117,8 @@
 	},
 	"pnpm": {
 		"patchedDependencies": {
-			"@aciccarello/webmention@1.4.6": "patches/@aciccarello__webmention@1.4.6.patch"
+			"@aciccarello/webmention@1.4.6": "patches/@aciccarello__webmention@1.4.6.patch",
+			"eleventy-plugin-rollup@1.3.0": "patches/eleventy-plugin-rollup@1.3.0.patch"
 		}
 	}
 }
