--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
 		"url": "https://github.com/ellyloel/ellyloel.com/issues"
 	},
 	"scripts": {
-		"start": "ELEVENTY_ENV=development npx @11ty/eleventy --serve --incremental --quiet",
-		"build": "pnpm build:eleventy && pnpm build:pagefind",
-		"build:eleventy": "ELEVENTY_ENV=production npx @11ty/eleventy --quiet",
-		"build:pagefind": "npx pagefind --source _site --bundle-dir pagefind",
-		"start:debug": "ELEVENTY_ENV=development DEBUG=Eleventy* npx @11ty/eleventy --serve --incremental",
-		"build:debug": "ELEVENTY_ENV=production DEBUG=Eleventy* npx @11ty/eleventy",
-		"build:benchmark": "ELEVENTY_ENV=production DEBUG=Eleventy:Benchmark* npx @11ty/eleventy",
+		"start": "ELEVENTY_ENV=development eleventy --serve --incremental --quiet",
+		"build": "ELEVENTY_ENV=production pnpm build:eleventy && pnpm build:pagefind",
+		"build:prod": "ELEVENTY_ENV=production pnpm build:eleventy && pnpm build:pagefind && node ./scripts/send-webmentions.js",
+		"build:local": "ELEVENTY_ENV=development pnpm build:eleventy && pnpm build:pagefind",
+		"build:eleventy": "eleventy --quiet",
+		"build:pagefind": "pagefind --source _site --bundle-dir pagefind",
+		"start:debug": "ELEVENTY_ENV=development DEBUG=Eleventy* eleventy --serve --incremental",
+		"build:debug": "DEBUG=Eleventy* eleventy",
+		"build:benchmark": "DEBUG=Eleventy:Benchmark* eleventy",
 		"clean": "rimraf _site",
 		"format": "prettier . --write",
 		"lint:css": "stylelint \"src/input/css/**/*.css\" --fix",
