--- a/package.json
+++ b/package.json
@@ -29,20 +29,19 @@
 		"format": "prettier . --write",
 		"lint:css": "stylelint \"src/input/css/**/*.css\" --fix",
 		"lint:js": "eslint src/input/js/ --fix",
-		"deploy": "netlify deploy -p --build"
+		"postbuild": "webmention _site/feed.atom --limit 10 --send"
 	},
 	"packageManager": "pnpm@9.14.2",
 	"dependencies": {
 		"@11ty/is-land": "^4.0.0",
-		"@aciccarello/webmention": "^1.4.6",
 		"@google/model-viewer": "^3.4.0",
+		"@remy/webmention": "^1.5.0",
 		"@zachleat/details-utils": "^2.0.2",
 		"canvas-confetti": "^1.9.2",
 		"css-doodle": "0.34.9",
 		"d3": "^7.9.0",
 		"dompurify": "^3.0.11",
 		"howler": "^2.2.4",
-		"netlify-plugin-cache": "^1.0.3",
 		"node-fetch": "^2.7.0",
 		"pagefind": "^0.12.0",
 		"three": "^0.160.0",
@@ -56,7 +55,6 @@
 		"@11ty/eleventy-plugin-inclusive-language": "^1.0.3",
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-		"@aciccarello/netlify-plugin-webmentions": "^1.1.0",
 		"@eslint/js": "^8.57.0",
 		"@fortawesome/fontawesome-free": "^6.5.2",
 		"@photogabble/eleventy-plugin-interlinker": "^1.0.5",
@@ -120,7 +118,6 @@
 	},
 	"pnpm": {
 		"patchedDependencies": {
-			"@aciccarello/webmention@1.4.6": "patches/@aciccarello__webmention@1.4.6.patch",
 			"eleventy-plugin-rollup@1.3.0": "patches/eleventy-plugin-rollup@1.3.0.patch"
 		}
 	},
