--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@11ty/is-land": "^4.0.0",
 		"@google/model-viewer": "^3.4.0",
 		"@remy/webmention": "^1.5.0",
+		"@terriblemia/eight-ball": "^0.2.0",
 		"@zachleat/details-utils": "^2.0.2",
 		"canvas-confetti": "^1.9.2",
 		"css-doodle": "0.34.9",
@@ -56,7 +57,7 @@
 		"@11ty/eleventy-plugin-rss": "^1.2.0",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
 		"@eslint/js": "^8.57.0",
-		"@fortawesome/fontawesome-free": "^6.5.2",
+		"@fortawesome/fontawesome-free": "^6.7.2",
 		"@photogabble/eleventy-plugin-interlinker": "^1.0.5",
 		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-terser": "^0.4.4",
