--- a/package.json
+++ b/package.json
@@ -105,8 +105,9 @@
 		"rimraf": "^5.0.5",
 		"rollup": "^3.29.4",
 		"rss-parser": "^3.13.0",
-		"stylelint": "^15.11.0",
-		"stylelint-config-standard": "^33.0.0",
+		"stylelint": "^16.13.2",
+		"stylelint-config-standard": "^37.0.0",
+		"stylelint-gamut": "^1.3.4",
 		"stylelint-order": "^6.0.4",
 		"webpack": "^5.91.0",
 		"wrangler": "^3.96.0"
