--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"build": "ELEVENTY_ENV=production pnpm build:eleventy && pnpm build:pagefind",
 		"build:local": "ELEVENTY_ENV=development pnpm build:eleventy && pnpm build:pagefind",
 		"build:eleventy": "eleventy --quiet",
-		"build:pagefind": "pagefind --source _site --bundle-dir pagefind",
+		"build:pagefind": "pagefind --site _site",
+		"start:pagefind": "pagefind --site _site --serve",
 		"start:debug": "ELEVENTY_ENV=development DEBUG=Eleventy* eleventy --serve --incremental",
 		"build:debug": "DEBUG=Eleventy* eleventy",
 		"build:benchmark": "DEBUG=Eleventy:Benchmark* eleventy",
@@ -46,6 +47,7 @@
 		"howler": "^2.2.4",
 		"node-fetch": "^2.7.0",
 		"nude-element": "^0.0.12",
+		"pagefind": "^1.3.0",
 		"three": "^0.160.0",
 		"whatwg-url": "5.0.0"
 	},
@@ -75,7 +77,6 @@
 		"eleventy-plugin-icons": "^2.4.3",
 		"eleventy-plugin-json-feed": "^0.0.7",
 		"eleventy-plugin-nesting-toc": "^1.3.0",
-		"eleventy-plugin-postcss": "^1.0.4",
 		"eleventy-plugin-rollup": "^1.3.0",
 		"eleventy-plugin-unfurl": "^1.0.0",
 		"eleventy-plugin-webmentions": "^2.1.0",
