--- a/package.json
+++ b/package.json
@@ -26,102 +26,91 @@
 		"start:debug": "ELEVENTY_ENV=development DEBUG=Eleventy* eleventy --serve --incremental",
 		"build:debug": "DEBUG=Eleventy* eleventy",
 		"build:benchmark": "DEBUG=Eleventy:Benchmark* eleventy",
-		"clean": "rimraf _site",
-		"format": "prettier . --write",
-		"lint:css": "stylelint \"src/input/css/**/*.css\" --fix",
-		"lint:js": "eslint src/input/js/ --fix",
+		"lint:css": "stylelint \"src/input/css/**/*.css\"",
+		"lint:css:fix": "stylelint \"src/input/css/**/*.css\" --fix",
+		"lint:js": "eslint src/input/js/",
+		"lint:js:fix": "eslint src/input/js/ --fix",
 		"postbuild": "webmention _site/feed.atom --limit 10 --send"
 	},
 	"packageManager": "pnpm@9.14.2",
 	"dependencies": {
 		"@11ty/eleventy": "^3.0.0",
 		"@11ty/is-land": "^4.0.0",
-		"@google/model-viewer": "^3.4.0",
+		"@google/model-viewer": "^4.0.0",
 		"@remy/webmention": "^1.5.0",
 		"@terriblemia/eight-ball": "^0.2.0",
 		"@zachleat/details-utils": "^2.0.2",
-		"canvas-confetti": "^1.9.2",
+		"canvas-confetti": "^1.9.3",
 		"color-elements": "^0.0.3",
-		"css-doodle": "0.34.9",
+		"css-doodle": "0.41.0",
 		"d3": "^7.9.0",
-		"dompurify": "^3.0.11",
+		"dompurify": "^3.2.4",
 		"howler": "^2.2.4",
 		"nude-element": "^0.0.12",
 		"pagefind": "^1.3.0",
-		"three": "^0.160.0",
-		"whatwg-url": "5.0.0"
+		"three": "^0.169.0"
 	},
 	"devDependencies": {
 		"@11ty/eleventy-fetch": "^5.0.2",
 		"@11ty/eleventy-img": "^6.0.1",
 		"@11ty/eleventy-navigation": "^0.3.5",
-		"@11ty/eleventy-plugin-rss": "^1.2.0",
+		"@11ty/eleventy-plugin-rss": "^2.0.3",
 		"@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
-		"@eslint/js": "^8.57.0",
+		"@eslint/js": "^9.0.0",
 		"@fortawesome/fontawesome-free": "^6.7.2",
-		"@photogabble/eleventy-plugin-interlinker": "^1.0.5",
-		"@rollup/plugin-node-resolve": "^15.2.3",
+		"@photogabble/eleventy-plugin-interlinker": "^1.1.0",
+		"@rollup/plugin-node-resolve": "^16.0.0",
 		"@rollup/plugin-terser": "^0.4.4",
 		"@sindresorhus/slugify": "^2.2.1",
-		"@types/markdown-it": "^12.2.3",
-		"browserslist": "^4.23.0",
-		"cssnano": "^6.1.2",
+		"@types/eslint": "^9.6.1",
+		"@types/markdown-it": "^14.1.2",
+		"browserslist": "^4.24.4",
+		"cssnano": "^7.0.6",
 		"cssremedy": "0.1.0-beta.2",
-		"dotenv": "^16.4.5",
-		"eleventy-plugin-backlinks": "^0.2.1",
-		"eleventy-plugin-broken-links": "^2.0.3",
+		"dotenv": "^16.4.7",
 		"eleventy-plugin-emoji": "^1.1.0",
-		"eleventy-plugin-gen-favicons": "^1.1.2",
+		"eleventy-plugin-gen-favicons": "^1.1.3",
 		"eleventy-plugin-icons": "^2.4.3",
-		"eleventy-plugin-json-feed": "^0.0.7",
 		"eleventy-plugin-nesting-toc": "^1.3.0",
 		"eleventy-plugin-rollup": "^1.3.0",
-		"eleventy-plugin-unfurl": "^1.0.0",
 		"eleventy-plugin-webmentions": "^2.1.0",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^8.10.0",
-		"eslint-plugin-prettier": "^4.2.1",
+		"eslint": "^9.0.0",
+		"globals": "^15.14.0",
 		"html-minifier": "^4.0.0",
-		"markdown-it": "^13.0.2",
-		"markdown-it-abbr": "^1.0.4",
-		"markdown-it-anchor": "^8.6.7",
-		"markdown-it-attrs": "^4.1.6",
-		"markdown-it-container": "^3.0.0",
-		"markdown-it-footnote": "^3.0.3",
+		"markdown-it": "^14.1.0",
+		"markdown-it-abbr": "^2.0.0",
+		"markdown-it-anchor": "^9.2.0",
+		"markdown-it-attrs": "^4.3.1",
+		"markdown-it-container": "^4.0.0",
+		"markdown-it-footnote": "^4.0.0",
 		"markdown-it-ins-del": "^0.1.1",
-		"markdown-it-mark": "^3.0.1",
-		"markdown-it-sup": "^1.0.0",
+		"markdown-it-mark": "^4.0.0",
+		"markdown-it-sup": "^2.0.0",
 		"markdown-it-wikilinks": "^1.4.0",
-		"open-props": "^1.7.0",
-		"postcss": "^8.4.38",
-		"postcss-import": "^15.1.0",
-		"postcss-jit-props": "^1.0.14",
-		"postcss-load-config": "^4.0.2",
-		"postcss-preset-env": "^8.5.1",
-		"prettier": "^2.8.8",
-		"remove-markdown": "^0.5.0",
-		"rimraf": "^5.0.5",
-		"rollup": "^3.29.4",
+		"open-props": "^1.7.12",
+		"postcss": "^8.5.1",
+		"postcss-import": "^16.1.0",
+		"postcss-jit-props": "^1.0.15",
+		"postcss-load-config": "^6.0.1",
+		"postcss-preset-env": "^10.1.3",
+		"remove-markdown": "^0.6.0",
+		"rollup": "^4.34.0",
 		"rss-parser": "^3.13.0",
-		"stylelint": "^16.13.2",
+		"stylelint": "^16.14.1",
 		"stylelint-config-standard": "^37.0.0",
 		"stylelint-gamut": "^1.3.4",
 		"stylelint-order": "^6.0.4",
-		"webpack": "^5.91.0",
-		"wrangler": "^3.96.0"
+		"wrangler": "^3.107.2"
 	},
 	"browserslist": [
 		"defaults"
 	],
-	"peerDependencies": {
-		"@types/markdown-it": "*",
-		"webpack": ">=5"
-	},
 	"pnpm": {
 		"patchedDependencies": {
 			"eleventy-plugin-rollup@1.3.0": "patches/eleventy-plugin-rollup@1.3.0.patch",
 			"cssremedy": "patches/cssremedy.patch",
-			"color-elements@0.0.3": "patches/color-elements@0.0.3.patch"
+			"color-elements@0.0.3": "patches/color-elements@0.0.3.patch",
+			"eleventy-plugin-webmentions": "patches/eleventy-plugin-webmentions.patch"
 		}
 	},
 	"engines": {
