--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"start:debug": "ELEVENTY_ENV=development DEBUG=Eleventy* eleventy --serve --incremental",
 		"build:debug": "DEBUG=Eleventy* eleventy",
 		"build:benchmark": "DEBUG=Eleventy:Benchmark* eleventy",
+		"postId": "./scripts/postId.js -a -d=./src/input/content/garden/",
 		"lint:css": "stylelint \"src/input/css/**/*.css\"",
 		"lint:css:fix": "stylelint \"src/input/css/**/*.css\" --fix",
 		"lint:js": "eslint src/input/js/",
