--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
 		"eslint": "^9.0.0",
 		"globals": "^15.14.0",
 		"html-minifier": "^4.0.0",
+		"js-yaml": "^4.1.0",
 		"markdown-it": "^14.1.0",
 		"markdown-it-abbr": "^2.0.0",
 		"markdown-it-anchor": "^9.2.0",
