--- a/package.json
+++ b/package.json
@@ -73,8 +73,8 @@
 		"eleventy-plugin-emoji": "^1.1.0",
 		"eleventy-plugin-gen-favicons": "^1.1.3",
 		"eleventy-plugin-icons": "^2.4.3",
-		"eleventy-plugin-nesting-toc": "^1.3.0",
 		"eleventy-plugin-rollup": "^1.3.0",
+		"eleventy-plugin-toc": "^1.1.5",
 		"eleventy-plugin-webmentions": "^2.1.0",
 		"eslint": "^9.0.0",
 		"globals": "^15.14.0",
@@ -84,6 +84,7 @@
 		"markdown-it": "^14.1.0",
 		"markdown-it-abbr": "^2.0.0",
 		"markdown-it-anchor": "^9.2.0",
+		"markdown-it-attribution": "^0.1.4",
 		"markdown-it-attrs": "^4.3.1",
 		"markdown-it-container": "^4.0.0",
 		"markdown-it-footnote": "^4.0.0",
