Adding wrangler stuff to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 **/.DS_Store
 localhost.pem
 localhost-key.pem
-wrangler.toml
 
 # App-specific
 cache
@@ -15,3 +14,5 @@ _site/
 _generated*
 node-supporters/
 src/_data/builtwith/
+.wrangler/
+wrangler.toml
