--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"dompurify": "^3.2.5",
 		"howler": "^2.2.4",
 		"nude-element": "^0.0.12",
+		"octokit": "^4.1.3",
 		"pagefind": "^1.3.0",
 		"three": "^0.172.0"
 	},
